crates/doodle-core/tests/snapshots/broken_syntax__33_with_missing_do.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `do` to open the `with` body
  --> 33-with-missing-do.doodle:1:17
1 | with pen = "red"
  |                 ^
